# agents_experiments

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  OpenAI-agents-sdk-docs.txt  README.md  pyproject.toml
artifacts/: lark_docs.json  temp_limited_lark_docs.json
artifacts/cleaned_docs/: advanced-examples-md.md  basic-calc-parser.md  basic-calculator-example.md  creating-ast-from-parse-notebook.py  creating-ast-from-parse-tree.md  csv-transformer-pandas-dict-md.md  custom-lexer-notebook.py  custom-sppf-prioritizer-md.md  error-handling-interactive-parser.md  error-reporting-earley-notebook.py  fruitflies-notebook.py  grammar-composition-example.md  how-to-develop-lark-guide-md.md  interactive-errors-notebook.py  json-parser-example.md  json-parser-notebook.py  json-parser-tutorial.md  lark-features-md.md  lark-grammar-reference-md.md  lark-grammar-reference.md  lark-lalr-contextual-lexer-md.md  lark-philosophy-md.md  lexer-dynamic-complete-earley.md  parsing-indentation.md  py3to2-tree-templates-md.md  py3to2-trees-templates.md  python-3-to-2-notebook-md.py  qscintilla-json-highlighting-md.md  reconstruct-python-example.md  simple-json-parser.md  standalone-example-md-1.md  standalone-example-md.md  (+4 more)
configs/: agent_pipeline.json  agent_pipeline_optimized.json  smoke_gpt5_nano.json
docs/: SDK_IMPROVEMENT_REPORT.md  SYSTEM_ARCHITECTURE.md  gpt5-mini-prompt-improvements.md  smoke-test-results.md
examples/: agent_clean_pipeline.py  run_lark_docs.sh  trio_agents_firecrawl.py
patches/: patch1.md  patch3.md  patch4.md
scripts/: gpt5_nano_smoke.py
tests/: conftest.py
(+644 files in other folders)
